@@ -5,7 +5,6 @@
 
 SHELL = /bin/sh
 
-PYTHON = python2.3
 PYTHON = python
 NOSETESTS = nosetests
 
@@ -18,6 +17,8 @@ build-7.10.8:
 test: build
 	mkdir -p tests/tmp
 	PYTHONSUFFIX=$$(python -V 2>&1 |awk '{print $$2}' |awk -F. '{print $$1 "." $$2}') && \
+	PYTHONPATH=$$(ls -d build/lib.*$$PYTHONSUFFIX):$$PYTHONPATH \
+	$(PYTHON) -c 'import pycurl; print(pycurl.version)'
 	PYTHONPATH=$$(ls -d build/lib.*$$PYTHONSUFFIX):$$PYTHONPATH \
 	$(NOSETESTS)
 
